# bespokefit_smee

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bespokefit-smee.py  bespokefit2.py  data_maker.py  enviroment.yaml  extract_xyzs.py  loss_functions.py  meta.yaml  mkdocs.yml  parameterizer.py  pyproject.toml  recipe.yaml  run-fit.py  typing-requirements.txt  writers.py
.github/: README.md  acknowledgement.txt
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: ci.yaml  docs.yaml
bespokefit-smee/: loss_functions.py  parameterizer.py  writers.py
bespokefit_smee/: __init__.py  _cli.py  _exceptions.py  _version.py  analyse.py  analysis.py  bespokefit_smee.py  data_maker.py  find_torsions.py  loss_functions.py  metadynamics.py  mlp.py  msm.py  outputs.py  parameterise.py  parameterizer.py  sample.py  settings.py  train.py  workflow.py  writers.py
bespokefit_smee/tests/: __init__.py  conftest.py
bespokefit_smee/tests/integration/: __init__.py  test_integration.py
bespokefit_smee/tests/unit/: __init__.py  test_parameterise.py  test_parameterizer.py
bespokefit_smee/utils/: __init__.py  _suppress_output.py  aimnet2.py  register.py  typing.py
devtools/envs/: base.yaml  cpu_only.yaml
docs/: theory.md
latest/: 404.html  changelog.html  development.html  index.html  objects.inv  sitemap.xml  theory.html
latest/changelog/: index.html
latest/development/: index.html
latest/reference/: SUMMARY.html  analysis.html  data_maker.html  index.html  loss_functions.html  mlp.html  parameterizer.html  settings.html  train.html  writers.html
latest/reference/SUMMARY/: index.html
latest/reference/analyse/: index.html
latest/reference/analysis/: index.html
latest/reference/data_maker/: index.html
latest/reference/find_torsions/: index.html
latest/reference/loss_functions/: index.html
latest/reference/metadynamics/: index.html
latest/reference/mlp/: index.html
latest/reference/msm/: index.html
latest/reference/outputs/: index.html
latest/reference/parameterise/: index.html
latest/reference/parameterizer/: index.html
latest/reference/sample/: index.html
latest/reference/settings/: index.html
latest/reference/train/: index.html
latest/reference/utils/: aimnet2.html  index.html  typing.html
latest/reference/utils/aimnet2/: index.html
latest/reference/utils/register/: index.html
latest/reference/utils/typing/: index.html
latest/reference/workflow/: index.html
latest/reference/writers/: index.html
latest/scripts/: gen_ref_pages.py
latest/search/: search_index.json
latest/theory/: index.html
tm/: training_config.yaml
