[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bespokefit_smee"
description = "Generate a Force-Field Parameterization from Single-Molecule MD."
authors = [ {name = "Thomas Pope"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
 "smee",
 "datasets",
 "jupyter",
 "nglview",
 "smirnoff-plugins >=0.0.4",
 "openmm",
 "openff-toolkit",
 "openff-units",
 "openff-interchange",
 "openmm-ml",
 "tensorboardX",
 "tensorboard"
]
[tool.setuptools]
packages = ["bespokefit_smee"]
