[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "bespokefit_smee"
description = "Generate a Force-Field Parameterization from Single-Molecule MD."
authors = [ {name = "Thomas Pope, Finlay Clark"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
 "smee >=0.16.2",
 "datasets",
 "jupyter",
 "nglview",
 "smirnoff-plugins >=0.0.4",
 "openmm",
 "openff-toolkit",
 "openff-units",
 "openff-interchange",
 "openmm-ml",
 "tensorboardX",
 "tensorboard",
 "versioneer",
]

[project.scripts]
bespokefit_smee = "bespokefit_smee.bespokefit_smee:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["bespokefit_smee"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "bespokefit_smee/_version.py"
versionfile_build = "bespokefit_smee/_version.py"
tag_prefix = ""
parentdir_prefix = "bespokefit_smee-"

[tool.ruff.lint]
ignore = ["C901", "E501"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]